--- a/app/index.html
+++ b/app/index.html
@@ -28,14 +28,18 @@
 
   <div class="large-hero">
     <img src="assets/images/hero.jpg">
-    <h5>Our Clinic Provides</h5>
-    <h3>Best Quality</h3>
-    <h2>Medical treatment for you and your family.</h2>
-    <ul>
-      <li>Risus nec luctus mauris orci auctor purus euismod pretium purus pretium ligula rutrum tempor sapien and luctus</li>
-      <li>Nemo ipsam egestas volute turpis dolores ut aliquam quaerat sodales sapien undo pretium purus feugiat dolor impedit</li>
-    </ul>
-    <p><a href="#">Discover More</a></p>
+    <div class="large-hero__text-content">
+        <h5 class="large-hero__text-content__strip-title">Our Clinic Provides</h5>
+        <div class="large-hero__text-content__text">
+            <h3 class="large-hero__subtitle">Best Quality</h3>
+            <h2 class="large-hero__title">Medical treatment for you and your family.</h2>
+            <ul class="large-hero__feature-list">
+              <li class="large-hero__feature-list__item">Risus nec luctus mauris orci auctor purus euismod pretium purus pretium ligula rutrum tempor sapien and luctus</li>
+              <li class="large-hero__feature-list__item">Nemo ipsam egestas volute turpis dolores ut aliquam quaerat sodales sapien undo pretium purus feugiat dolor impedit</li>
+            </ul>
+            <p><a href="#" class="btn btn-blue">Discover More</a></p>
+        </div>
+    </div>
   </div>
 
   <div id="our-beginning">
